--- a/index.html
+++ b/index.html
@@ -12,15 +12,23 @@
   <title>Frontend Mentor | Stats preview card component</title>
 </head>
 <body>
-
-  Get insights that help your business grow.
-
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
+  <div>
+    <img src="images/image-header-mobile.jpg" alt="Women at desks coding on laptops" class="mobile-img">
+  </div>
+  <div>
+<h1>Get insights that help your business grow.</h1>
+  
+<p>Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+  experience, and overall efficiency.</p>
 
   10k+ companies
   314 templates
   12m+ queries
+  </div>
+  <div>
+    <img src="images/image-header-desktop.jpg" alt="Women at desks coding on laptops">
+  </div>
+
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
