--- a/index.html
+++ b/index.html
@@ -20,10 +20,22 @@
   
 <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer 
   experience, and overall efficiency.</p>
-
-  10k+ companies
-  314 templates
-  12m+ queries
+  <div class="row">
+<ul class="col">
+  <li>10k+ </li>
+  <li>companies</li>
+</ul>
+<ul class="col">
+  <li>314</li>
+  <li>templates</li>
+</ul>
+<ul class="col">
+  <li>12m+</li>
+  <li>queries</li>
+</ul>
+  </div>
+   
+   
   </div>
   <div>
     <img src="images/image-header-desktop.jpg" alt="Women at desks coding on laptops">
