Changed grid to flexbox

--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
   
 <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer 
   experience, and overall efficiency.</p>
-  <div class="row">
-<ul class="col">
-  <li>10k+ </li>
+  <div class="d-flex">
+<ul class="">
+  <li class="number">10k+ </li>
   <li>companies</li>
 </ul>
-<ul class="col">
-  <li>314</li>
+<ul class="">
+  <li class="number">314</li>
   <li>templates</li>
 </ul>
-<ul class="col">
-  <li>12m+</li>
+<ul class="">
+  <li class="number">12m+</li>
   <li>queries</li>
 </ul>
   </div>
