Spacing and placement

--- a/index.html
+++ b/index.html
@@ -11,37 +11,37 @@
   <link rel="stylesheet" href="src/styles.css">
   <title>Frontend Mentor | Stats preview card component</title>
 </head>
-<body>
-  <div>
-    <img src="images/image-header-mobile.jpg" alt="Women at desks coding on laptops" class="mobile-img">
-  </div>
-  <div>
+<body class="d-flex justify-content-center align-items-center">
+  <div class="card-container d-flex">
+ 
+  <div class="card-text p-5">
 <h1>Get insights that help your business grow.</h1>
   
 <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer 
   experience, and overall efficiency.</p>
   <div class="d-flex">
-<ul class="">
+<ul>
   <li class="number">10k+ </li>
   <li>companies</li>
 </ul>
-<ul class="">
+<ul>
   <li class="number">314</li>
   <li>templates</li>
 </ul>
-<ul class="">
+<ul>
   <li class="number">12m+</li>
   <li>queries</li>
 </ul>
-  </div>
-   
-   
-  </div>
+</div>
+  
+</div>
   <div>
     <img src="images/image-header-desktop.jpg" alt="Women at desks coding on laptops">
+    <img src="images/image-header-mobile.jpg" alt="Women at desks coding on laptops" class="mobile-img">
   </div>
 
 
+</div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Michaela Kleer</a>.
