Added root colors and other styling

--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
 <body class="d-flex justify-content-center align-items-center">
   <div class="card-container d-flex">
  
-  <div class="card-text p-5">
+  <div class="card-text">
 <h1>Get insights that help your business grow.</h1>
   
 <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer 
   experience, and overall efficiency.</p>
   <div class="d-flex">
 <ul>
-  <li class="number">10k+ </li>
-  <li>companies</li>
+  <li class="list-number">10k+ </li>
+  <li class="list-text">companies</li>
 </ul>
 <ul>
-  <li class="number">314</li>
-  <li>templates</li>
+  <li class="list-number">314</li>
+  <li class="list-text">templates</li>
 </ul>
 <ul>
-  <li class="number">12m+</li>
-  <li>queries</li>
+  <li class="list-number uppercase">12m+</li>
+  <li class="list-text">queries</li>
 </ul>
 </div>
   
