--- a/index.html
+++ b/index.html
@@ -1,50 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="stylesheet" href="src/styles.css">
-  <title>Frontend Mentor | Stats preview card component</title>
-</head>
-<body class="d-flex justify-content-center align-items-center">
-  <div class="card-container d-flex">
- 
-  <div class="card-text">
-<h1>Get insights that help your business grow.</h1>
-  
-<p>Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.</p>
-  <div class="d-flex">
-<ul>
-  <li class="list-number">10k+ </li>
-  <li class="list-text">companies</li>
-</ul>
-<ul>
-  <li class="list-number">314</li>
-  <li class="list-text">templates</li>
-</ul>
-<ul>
-  <li class="list-number uppercase">12m+</li>
-  <li class="list-text">queries</li>
-</ul>
-</div>
-  
-</div>
-  <div>
-    <img src="images/image-header-desktop.jpg" alt="Women at desks coding on laptops">
-    <img src="images/image-header-mobile.jpg" alt="Women at desks coding on laptops" class="mobile-img">
-  </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="src/styles.css" />
+    <title>Frontend Mentor | Stats preview card component</title>
+  </head>
+  <body class="d-flex justify-content-center align-items-center">
+    <div class="card-container d-flex">
+      <div class="card-text">
+        <h1>Get <span>insights</span> that help your business grow.</h1>
 
-
-</div>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Michaela Kleer</a>.
-  </div>
-</body>
+        <p>
+          Discover the benefits of data analytics and make better decisions
+          regarding revenue, customer experience, and overall efficiency.
+        </p>
+        <div class="stats d-flex justify-content-between">
+          <ul>
+            <li class="list-number">10k+</li>
+            <li class="list-text">companies</li>
+          </ul>
+          <ul>
+            <li class="list-number">314</li>
+            <li class="list-text">templates</li>
+          </ul>
+          <ul>
+            <li class="list-number uppercase">12m+</li>
+            <li class="list-text">queries</li>
+          </ul>
+        </div>
+      </div>
+      <div class="card-image">
+        <img
+          src="images/image-header-desktop.jpg"
+          alt="Women at desks coding on laptops"
+          class="desktop-img"
+        />
+        <img
+          src="images/image-header-mobile.jpg"
+          alt="Women at desks coding on laptops"
+          class="mobile-img"
+        />
+      </div>
+    </div>
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Michaela Kleer</a>.
+    </div>
+  </body>
 </html>
