Media query styling

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           Discover the benefits of data analytics and make better decisions
           regarding revenue, customer experience, and overall efficiency.
         </p>
-        <div class="stats d-flex justify-content-between">
+        <div class="stats d-flex justify-content-md-between">
           <ul>
             <li class="list-number">10k+</li>
             <li class="list-text">companies</li>
